--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -31,7 +31,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">동영상 감지</a>
+                        <a class="nav-link" href="{{ url_for('detect.detect_videos') }}">동영상 감지</a>
                     </li>
                 </ul>
 
