--- a/src/domains/detect/templates/detect/video_dashboard.html
+++ b/src/domains/detect/templates/detect/video_dashboard.html
@@ -6,7 +6,7 @@
     {% for user_video in user_videos %}
     <div class="col">
         <div class="bg-body-secondary p-3 ratio ratio-4x3">
-            <a href="">
+            <a href="{{ url_for('detect.detect_videos', video_id=user_video.id) }}">
                 <img src="" alt="이미지" class="img-thumbnail object-fit-cover">
             </a>
         </div>
